--- a/common/commontestapplication/src/main/res/values/strings.xml
+++ b/common/commontestapplication/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Common Test Application</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_preferences_test">Preferences Test</string>
 </resources>
